# BioInformatica2023

./: .gitignore  buildtask.ps1  meson.build  wasm.txt
core/: seeds.cpp
demo/: index.html  mbeccariBioinformatica2023emscripten.js  mbeccariBioinformatica2023emscripten.wasm
demo/demobioinformatica/: README.md  angular.json  package-lock.json  package.json
demo/demobioinformatica/src/: index.html  styles.scss
demo/demobioinformatica/src/app/: app.component.html  app.component.spec.ts  app.component.ts
demo/demobioinformatica/src/assets/: mbeccariBioinformatica2023emscripten.js  mbeccariBioinformatica2023emscripten.wasm
docs/: index.html  main.5bd926a77693c153.js  main.b5454b18b6c074b4.js  polyfills.a254366b76a33170.js  progetto_bioinformatica_spaced_seeds_mbeccari_856608.tex  runtime.7d219f88e807ae02.js  styles.b3509cc8b78d9a7d.css
docs/assets/: mbeccariBioinformatica2023emscripten.js  mbeccariBioinformatica2023emscripten.wasm
include/: HashInfo.h  seeds.h
presentazione/: presentazione.tex  presentazione.vrb  template.aux  template.nav  template.tex  template.toc  template.vrb
project/: progetto_bioinformatica_spaced_seeds_mbeccari_856608.tex
src/: HashInfo.cpp  main.cpp  seeds.cpp
wasm/: a.out.js  a.out.wasm  libsources.cpp
